--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
     "pages/user/user",
     "pages/order/order",
     "pages/order/orderdetail/orderdetail",
-    "pages/share/share"
+    "pages/share/share",
+    "pages/wuliu/wuliu"
   ],
   "window": {
     "backgroundTextStyle": "light",
