--- a/project.config.json
+++ b/project.config.json
@@ -40,7 +40,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 3,
+			"current": 4,
 			"list": [
 				{
 					"id": -1,
@@ -68,6 +68,13 @@
 					"name": "orderDetail",
 					"pathName": "pages/order/orderdetail/orderdetail",
 					"query": "orderId=935",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "wuliu",
+					"pathName": "pages/wuliu/wuliu",
+					"query": "",
 					"scene": null
 				}
 			]
