7-2 第二天结束，地址修改添加
7-2 第二天结束，地址修改添加

--- a/app.json
+++ b/app.json
@@ -8,7 +8,9 @@
     "pages/order/order",
     "pages/order/orderdetail/orderdetail",
     "pages/share/share",
-    "pages/wuliu/wuliu"
+    "pages/wuliu/wuliu",
+    "pages/address/address",
+    "pages/address/editaddress/editaddress"
   ],
   "window": {
     "backgroundTextStyle": "light",
