7-3第三天添加`我的`页面
7-3第三天添加`我的`页面

--- a/app.json
+++ b/app.json
@@ -10,7 +10,10 @@
     "pages/share/share",
     "pages/wuliu/wuliu",
     "pages/address/address",
-    "pages/address/editaddress/editaddress"
+    "pages/address/editaddress/editaddress",
+    "pages/money/money",
+    "pages/join/message/message",
+    "pages/join/gifts/gifts"
   ],
   "window": {
     "backgroundTextStyle": "light",
