--- a/project.config.json
+++ b/project.config.json
@@ -40,7 +40,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 10,
+			"current": 13,
 			"list": [
 				{
 					"id": -1,
@@ -116,6 +116,28 @@
 					"id": -1,
 					"name": "gifts",
 					"pathName": "pages/join/gifts/gifts",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "paySuccess",
+					"pathName": "pages/join/paySuccess/paySuccess",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "refer",
+					"pathName": "pages/refer/refer",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 13,
+					"name": "detail",
+					"pathName": "pages/detail/detail",
+					"query": "goodsId=1",
 					"scene": null
 				}
 			]
