--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wxc4fe8b141402a102",
+	"appid": "wxe8b5c6bfb6ba07ea",
 	"projectname": "SKbeer_demo",
 	"debugOptions": {
 		"hidedInDevtools": []
