--- a/project.config.json
+++ b/project.config.json
@@ -40,7 +40,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 30,
+			"current": 4,
 			"list": [
 				{
 					"id": -1,
@@ -74,7 +74,7 @@
 					"id": 4,
 					"name": "wuliu",
 					"pathName": "pages/wuliu/wuliu",
-					"query": "order_sn=12",
+					"query": "order_sn=SH20190730150023833787",
 					"scene": null
 				},
 				{
