--- a/project.config.json
+++ b/project.config.json
@@ -40,7 +40,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 32,
+			"current": 33,
 			"list": [
 				{
 					"id": -1,
@@ -271,6 +271,12 @@
 					"name": "myRefer",
 					"pathName": "pages/user/myRefer/myRefer",
 					"query": "type=1&member_id=123",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "order",
+					"pathName": "pages/detail/order/order",
 					"scene": null
 				}
 			]
