--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wxe8b5c6bfb6ba07ea",
+	"appid": "wx9190c7db40237677",
 	"projectname": "%E8%BF%AD%E4%BB%A3%E7%89%88%E6%9C%AC",
 	"debugOptions": {
 		"hidedInDevtools": []
