--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wx9190c7db40237677",
+	"appid": "wxdbd4827fc15ed308",
 	"projectname": "%E8%BF%AD%E4%BB%A3%E7%89%88%E6%9C%AC",
 	"debugOptions": {
 		"hidedInDevtools": []
